this is my new commit

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Bookorama</title>
     <link href="https://fonts.googleapis.com/css?family=Maven+Pro:400,500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <header id="wrapper">
@@ -38,9 +38,9 @@
                   <li class="book-item">
                     Irebe My daughter
                   </li>
-                </ul>
+              </ul>
           </article>
-          <aside>
+          <aside class="btn-aside">
               <button class="delete-btn">delete</button><br>
               <button class="delete-btn">delete</button><br>
               <button class="delete-btn">delete</button><br>
@@ -59,7 +59,7 @@
       </form>
     </footer>
 
-    <script type="text/javascript" src="app.js">
+    <script type="text/javascript" src="js/app.js">
     </script>
   </body>
 </html>
